--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates") }}">Event Frame Templates</a></li>
-                        <li><a href = "{{ url_for("eventFrames.listEventFrames") }}">Event Frames</a></li>
+                        <!-- <li><a href = "{#{ url_for("eventFrames.listEventFrames") }#}">Event Frames</a></li> -->
                     </ul>
                 </li>
                 <li><a href = "{{ url_for("elements.selectElement") }}">Data Entry</a></li>
