--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -19,8 +19,8 @@ Event Frames
     </ol>
     <h1>{{ element.Name }}</h1>
     <h2>{{ eventFrameTemplate.Name }} Event Frames</h2>
-    <a class = "btn btn-default" title = "Add" href = "{#{ url_for("eventFrames.addEventFrame") }#}" role = "button">
-        <span class="glyphicon glyphicon-plus"></a>
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrames.addEventFrame", elementId = element.ElementId,
+        eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) }}" role = "button"><span class="glyphicon glyphicon-plus"></a>
     <table class = "table">
         <thead>
             <tr>
