--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -28,6 +28,7 @@ Event Frames
                 <th>End Timestamp</th>
                 <th></th>
                 <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -39,6 +40,10 @@ Event Frames
                     {% else %}
                         <td></td>
                     {% endif %}
+                    <td><a class = "btn btn-default" title = "Child Event Frames"
+                        href = "{{ url_for("eventFrames.listChildEventFrames", parentEventFrameId = eventFrame.EventFrameId) }}">
+                        <span class="glyphicon glyphicon-list"></span>
+                        </a></td>
                     <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrames.editEventFrame",
                         eventFrameId = eventFrame.EventFrameId) }}"><span class="glyphicon glyphicon-edit"></a></td>
                     <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrames.deleteEventFrame",
