--- a/app/templates/eventFrameTemplates/eventFrameTemplates.html
+++ b/app/templates/eventFrameTemplates/eventFrameTemplates.html
@@ -10,7 +10,7 @@ Event Frame Templates
         {% if parentEventFrameTemplate %}
             {% set parentEventFrameTemplateId = parentEventFrameTemplate.EventFrameTemplateId %}
             <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates") }}">Event Frame Templates</a></li>
-            {% for ancestor in parentEventFrameTemplate.ancestors([]) %}
+            {% for ancestor in parentEventFrameTemplate.ancestors() %}
                 <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates",
                     parentEventFrameTemplateId = ancestor.EventFrameTemplateId) }}">{{ ancestor.Name }}</a></li>
             {% endfor %}
