Event frame child navigation hooked up.

--- a/app/templates/elements/elementDashboard.html
+++ b/app/templates/elements/elementDashboard.html
@@ -24,8 +24,8 @@
             <tr>
                 <th></th>
                 <th>Event Frame</th>
-                <th>Start Time</th>
-                <th>End Time</th>
+                <th>Last Start Timestamp</th>
+                <th>Last End Timestamp</th>
                 <th></th>
                 <th></th>
                 <th></th>
