--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% import "_macros.html" as macros %}
+
 {% block title %}
 Event Frames
 {% endblock %}
@@ -100,4 +102,13 @@ Event Frames
         </tbody>
     </table>
 </div>
+{% if pagination %}
+<div class = "text-right">
+    {% if parentEventFrame %}
+        {{ macros.pagination_widget(pagination, ".listEventFrames", parentEventFrameId = parentEventFrame.EventFrameId) }}
+    {% else %}
+        {{ macros.pagination_widget(pagination, ".listEventFrames", elementId = element.ElementId, eventFrameTemplateId = element.ElementTemplate.ElementTemplateId) }}
+    {% endif %}
+</div>
+{% endif %}
 {% endblock %}
