--- a/app/templates/elementTemplates/elementTemplates.html
+++ b/app/templates/elementTemplates/elementTemplates.html
@@ -12,9 +12,9 @@ Element Templates
     <table class = "table">
         <thead>
             <tr>
-                <th>Site</th>
-                <th>Name</th>
-                <th>Description</th>
+                <th><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Site</a></th>
+                <th><a href = "{{ url_for("elementTemplates.listElementTemplates", sortColumn = "ElementTemplate.Name") }}">Name</a></th>
+                <th><a href = "{{ url_for("elementTemplates.listElementTemplates", sortColumn = "ElementTemplate.Description") }}">Description</a></th>
                 <th></th>
                 <th></th>
             </tr>
