--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
                         <li><a href = "{{ url_for("attributeTemplates.listAttributeTemplates") }}">Attribute Templates</a></li>
                     </ul>
                 </li>
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements</a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("elements.listElements") }}">Elements</a></li>
                         <li><a href = "{{ url_for("elementAttributes.listElementAttributes") }}">Element Attributes</a></li>
