--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,8 +57,13 @@
 
 {% block content %}
 <div class = "container">
-    {% for message in get_flashed_messages() %}
-    <div class = "alert alert-warning">
+    {% for category, message in get_flashed_messages(with_categories = true) %}
+    {% if category == "message" %}
+        {% set alertClass = "alert alert-warning" %}
+    {% else %}
+        {% set alertClass = category %}
+    {% endif %}
+    <div class = "{{ alertClass }}">
         <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
         {{ message }}
     </div>
